--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   easy_localization: ^3.0.4
   # splash Screen
   flutter_native_splash: ^2.3.5
+  # svg re rendering widget
+  flutter_svg: ^2.0.9
+  # responsive
+  flutter_screenutil: ^5.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -80,9 +84,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
