--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -2,5 +2,8 @@ flutter_native_splash:
   # Android + ios blew 12.
   color: "#ffffff"
   image: assets/images/Splash.png 
+  # background_image: assets/images/Splash.png 
   
   android_12:
+    color: "#ffffff"
+    image: assets/images/Splash.png 
